--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -264,4 +264,14 @@ GC_NAVIGATE_PLUS_16 BITMAP "..\\bmp\\gc_navigate_plus_16.bmp"
 GC_NAVIGATE_MINUS_16 BITMAP "..\\bmp\\gc_navigate_minus_16.bmp"
 GC_CUT_16 BITMAP "..\\bmp\\gc_cut_16.bmp"
 GC_CLIPBOARD_PASTE_16 BITMAP "..\\bmp\\gc_clipboard_paste_16.bmp"
-
+GC_UNDO_INV_16 BITMAP "..\\bmp\\gc_undo_inv_16.bmp"
+GC_TEXT_UNDERLINE_16 BITMAP "..\\bmp\\gc_text_underline_16.bmp"
+GC_TEXT_ITALICS_16 BITMAP "..\\bmp\\gc_text_italics_16.bmp"
+GC_TEXT_ALIGN_LEFT_16 BITMAP "..\\bmp\\gc_text_align_left_16.bmp"
+GC_TEXT_ALIGN_RIGHT_16 BITMAP "..\\bmp\\gc_text_align_right_16.bmp"
+GC_PIN_BLUE_16 BITMAP "..\\bmp\\gc_pin_blue_16.bmp"
+GC_DATA_16 BITMAP "..\\bmp\\gc_data_16.bmp"
+GC_SIGN_WARNING_16 BITMAP "..\\bmp\\gc_sign_warning_16.bmp"
+GC_TEXT_BOLD_16 BITMAP "..\\bmp\\gc_text_bold_16.bmp"
+GC_TEXT_CENTER_16 BITMAP "..\\bmp\\gc_text_center_16.bmp"
+GC_TEXT_JUSTIFIED_16 BITMAP "..\\bmp\\gc_text_justified_16.bmp"
