--- a/resource/Gstimage2.rc
+++ b/resource/Gstimage2.rc
@@ -5,40 +5,15 @@
 #include <richedit.h>
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
-
-BOOK_RED_32 BITMAP "..\\bmp\\Book_Red_32.bmp"
-BOOK_RED_16 BITMAP "..\\bmp\\Book_Red_16.bmp"
-FOLDERS_32 BITMAP "..\\bmp\\Folders_32.bmp"
-POWER_DRILL_32 BITMAP "..\\bmp\\Power_Drill_32.bmp"
-POWER_DRILL_16 BITMAP "..\\bmp\\Power_Drill_16.bmp"
-TEACHER_32 BITMAP "..\\bmp\\Teacher_32.bmp"
-TEACHER_16 BITMAP "..\\bmp\\Teacher_16.bmp"
-SCHOOL_32 BITMAP "..\\bmp\\School_32.bmp"
-
-FOLDER_GEAR_32 BITMAP "..\\bmp\\Folder_Gear_32.bmp"
-FOLDER_GEAR_16 BITMAP "..\\bmp\\Folder_Gear_16.bmp"
-
-MDA_16 BITMAP "..\\bmp\\Mda_16.bmp"
-EMPTY_16 BITMAP "..\\bmp\\Empty_16.bmp"
-DATA_CONNECTION_16 BITMAP "..\\bmp\\data_connection_16.bmp"
-BALERT BITMAP "..\\bmp\\warning_16.bmp"
-Warning_16 BITMAP "..\\bmp\\warning_16.bmp"
-PDF BITMAP "..\\bmp\\Document_pdf_16.bmp"
-PDF_16 BITMAP "..\\bmp\\Document_pdf_16.bmp"
-FOLDER_32 BITMAP "..\\bmp\\Folder_32.bmp"
-TEXT_COLOR BITMAP "..\\bmp\\text_color_16.bmp"
-TEXT_BOLD BITMAP "..\\bmp\\text_bold_16.bmp"
-TEXT_JUSTIFIED_16 BITMAP "..\\bmp\\text_align_justified_16.bmp"
-TEXT_CENTER BITMAP "..\\bmp\\text_align_center_16.bmp"
-
-EXIT BITMAP "..\\bmp\\Exit_16.bmp"
+PDF BITMAP "..\\bmp\\gc_document_pdf_16.bmp"
+PDF_16 BITMAP "..\\bmp\\gc_document_pdf_16.bmp"
+EXIT BITMAP "..\\bmp\\gc_door_exit_16.bmp"
 TOP BITMAP "..\\bmp\\Navigate_Beginning_16.bmp"
 PREVIOUS BITMAP "..\\bmp\\Navigate_Left_16.bmp"
 NEXT BITMAP "..\\bmp\\Navigate_Right_16.bmp"
 BOTTOM BITMAP "..\\bmp\\Navigate_End_16.bmp"
-ONE_PAGE BITMAP "..\\bmp\\Document_Plain_16.bmp"
-TWO_PAGES BITMAP "..\\bmp\\Documents_16.bmp"
-PRINTER BITMAP "..\\bmp\\Printer2_16.bmp"
+
+
 PRVZOOM BITMAP "..\\bmp\\Document_Zoom_In_16.bmp"
 UNZOOM BITMAP "..\\bmp\\Document_Zoom_Out_16.bmp"
 CLI BITMAP "..\\bmp\\Id_Card_16.bmp"
@@ -74,7 +49,6 @@ USERS2_16 BITMAP "..\\bmp\\Users2_16.bmp"
 USERS2_32 BITMAP "..\\bmp\\Users2_32.bmp"
 SIGNPOST_16 BITMAP "..\\bmp\\Signpost_16.bmp"
 SIGNPOST_32 BITMAP "..\\bmp\\Signpost_32.bmp"
-EXIT_16 BITMAP "..\\bmp\\Exit_16.bmp"
 EXIT_32 BITMAP "..\\bmp\\Exit_32.bmp"
 TRUCK_BLUE_16 BITMAP "..\\bmp\\Truck_Blue_16.bmp"
 TRUCK_BLUE_32 BITMAP "..\\bmp\\Truck_Blue_32.bmp"
@@ -180,7 +154,6 @@ BNOFILTER16 BITMAP "..\\bmp\\Funnel_Delete_16.bmp"
 BADDFILTER16 BITMAP "..\\bmp\\Funnel_Add_16.bmp"
 BAL_EURO32 BITMAP "..\\bmp\\Currency_Euro_32.bmp"
 SNDINT32 BITMAP "..\\bmp\\Earth_32.bmp"
-BMPCONTA32 BITMAP "..\\bmp\\Folder2_red_32.bmp"
 SATELLITE16 BITMAP "..\\bmp\\gc_satellite_dish2_16.bmp"
 SEND16 BITMAP "..\\bmp\\Satellite_16.bmp"
 SEND32 BITMAP "..\\bmp\\Nav_up_green_32.bmp"
