--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -12757,15 +12757,11 @@ LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
 BSTOP BITMAP "..\\bmp\\Forbidden_16.bmp"
 
-EXIT BITMAP "..\\bmp\\Exit_16.bmp"
+EXIT BITMAP "..\\bmp\\gc_door_exit_16.bmp"
 
 NEXT BITMAP "..\\bmp\\Navigate_Right_16.bmp"
 
-ONE_PAGE BITMAP "..\\bmp\\Document_Plain_16.bmp"
-
 PREVIOUS BITMAP "..\\bmp\\Navigate_Left_16.bmp"
-
-TWO_PAGES BITMAP "..\\bmp\\Documents_16.bmp"
 
 HELPENTRY DIALOG DISCARDABLE 141, -5, 380, 286
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
