--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -275,3 +275,4 @@ GC_SIGN_WARNING_16 BITMAP "..\\bmp\\gc_sign_warning_16.bmp"
 GC_TEXT_BOLD_16 BITMAP "..\\bmp\\gc_text_bold_16.bmp"
 GC_TEXT_CENTER_16 BITMAP "..\\bmp\\gc_text_center_16.bmp"
 GC_TEXT_JUSTIFIED_16 BITMAP "..\\bmp\\gc_text_justified_16.bmp"
+DOCUMENT_PLAIN_EARTH_16 BITMAP "..\\bmp\\DOCUMENT_PLAIN_EARTH_16.bmp"
