--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -276,3 +276,4 @@ GC_TEXT_BOLD_16 BITMAP "..\\bmp\\gc_text_bold_16.bmp"
 GC_TEXT_CENTER_16 BITMAP "..\\bmp\\gc_text_center_16.bmp"
 GC_TEXT_JUSTIFIED_16 BITMAP "..\\bmp\\gc_text_justified_16.bmp"
 DOCUMENT_PLAIN_EARTH_16 BITMAP "..\\bmp\\DOCUMENT_PLAIN_EARTH_16.bmp"
+GC_BINOCULAR2_16 BITMAP "..\\bmp\\gc_binocular2_16.bmp"
