--- a/resource/Gstimage2.rc
+++ b/resource/Gstimage2.rc
@@ -12,49 +12,14 @@ TOP BITMAP "..\\bmp\\Navigate_Beginning_16.bmp"
 PREVIOUS BITMAP "..\\bmp\\Navigate_Left_16.bmp"
 NEXT BITMAP "..\\bmp\\Navigate_Right_16.bmp"
 BOTTOM BITMAP "..\\bmp\\Navigate_End_16.bmp"
-
-
-PRVZOOM BITMAP "..\\bmp\\Document_Zoom_In_16.bmp"
-UNZOOM BITMAP "..\\bmp\\Document_Zoom_Out_16.bmp"
-CLI BITMAP "..\\bmp\\Id_Card_16.bmp"
-CLIPOT BITMAP "..\\bmp\\Id_Card_Information_16.bmp"
-OFFICE_BUILDING_16 BITMAP "..\\bmp\\Factory_16.bmp"
-OFFICE_BUILDING_32 BITMAP "..\\bmp\\Factory_32.bmp"
-
-
-STOPWATCH_32 BITMAP "..\\bmp\\stopwatch_32.bmp"
-FOLDER_CUBES_COLOR_16 BITMAP "..\\bmp\\Folder_Cubes_Color_16.bmp"
-FOLDER_CUBES_COLOR_32 BITMAP "..\\bmp\\Folder_Cubes_Color_32.bmp"
-CUBES_32 BITMAP "..\\bmp\\Cubes_32.bmp"
-CUBES_BLUE_32 BITMAP "..\\bmp\\Cubes_Blue_32.bmp"
-
-DIE_GOLD_16 BITMAP "..\\bmp\\Die_Gold_16.bmp"
-DIE_GOLD_32 BITMAP "..\\bmp\\Die_Gold_32.bmp"
-TAPE_MEASURE2_16 BITMAP "..\\bmp\\Tape_Measure2_16.bmp"
-TAPE_MEASURE2_32 BITMAP "..\\bmp\\Tape_Measure2_32.bmp"
-POTION_RED_16 BITMAP "..\\bmp\\Potion_Red_16.bmp"
-POTION_RED_32 BITMAP "..\\bmp\\Potion_Red_32.bmp"
+CLI BITMAP "..\\bmp\\gc_id_card_16.bmp"
+CLIPOT BITMAP "..\\bmp\\gc_id_card_hint_16.bmp"
 INDEX_16 BITMAP "..\\bmp\\Index_16.bmp"
-STAR_RED_16 BITMAP "..\\bmp\\Star_Red_16.bmp"
-STAR_RED_32 BITMAP "..\\bmp\\Star_Red_32.bmp"
-STAR_BLUE_16 BITMAP "..\\bmp\\Star_Blue_16.bmp"
-STAR_BLUE_32 BITMAP "..\\bmp\\Star_Blue_32.bmp"
-PACKAGE_FIND_16 BITMAP "..\\bmp\\Package_Find_16.bmp"
-PACKAGE_FIND_32 BITMAP "..\\bmp\\Package_Find_32.bmp"
-FIND BITMAP "..\\bmp\\Find_16.bmp"
-PACKAGE_VIEW_16 BITMAP "..\\bmp\\Package_View_16.bmp"
-PACKAGE_VIEW_32 BITMAP "..\\bmp\\Package_View_32.bmp"
-USER1_PREFERENCES_16 BITMAP "..\\bmp\\User1_Preferences_16.bmp"
-USERS2_16 BITMAP "..\\bmp\\Users2_16.bmp"
-USERS2_32 BITMAP "..\\bmp\\Users2_32.bmp"
-SIGNPOST_16 BITMAP "..\\bmp\\Signpost_16.bmp"
-SIGNPOST_32 BITMAP "..\\bmp\\Signpost_32.bmp"
-EXIT_32 BITMAP "..\\bmp\\Exit_32.bmp"
-TRUCK_BLUE_16 BITMAP "..\\bmp\\Truck_Blue_16.bmp"
-TRUCK_BLUE_32 BITMAP "..\\bmp\\Truck_Blue_32.bmp"
+FIND BITMAP "..\\bmp\\gc_binocular2_16.bmp"
 
-GRPPRV_32 BITMAP "..\\bmp\\Users3_32.bmp"
-CURRENCY_EURO_32 BITMAP "..\\bmp\\Currency_Euro_32.bmp"
+
+
+
 PAGINATOR_32 BITMAP "..\\bmp\\Paginator_32.bmp"
 
 PACKAGE_32 BITMAP "..\\bmp\\Package_32.bmp"
@@ -152,7 +117,6 @@ NIL16 BITMAP "..\\bmp\\Nil_16.bmp"
 WHITE16 BITMAP "..\\bmp\\White_16.bmp"
 BNOFILTER16 BITMAP "..\\bmp\\Funnel_Delete_16.bmp"
 BADDFILTER16 BITMAP "..\\bmp\\Funnel_Add_16.bmp"
-BAL_EURO32 BITMAP "..\\bmp\\Currency_Euro_32.bmp"
 SNDINT32 BITMAP "..\\bmp\\Earth_32.bmp"
 SATELLITE16 BITMAP "..\\bmp\\gc_satellite_dish2_16.bmp"
 SEND16 BITMAP "..\\bmp\\Satellite_16.bmp"
