cuentas ventas devoluciones

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1065,32 +1065,39 @@ ART_15 DIALOG DISCARDABLE 36, 16, 496, 286
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 98, 38, 56, 11
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 156, 38, 236, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 98, 54, 56, 11
-  CONTROL "", 111, "Edit", WS_BORDER|WS_TABSTOP, 156, 54, 236, 11
-  CONTROL "", 112, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 54, 72, 11
-  CONTROL "", 120, "TXBrowse", WS_TABSTOP|0x00300000, 48, 66, 440, 88
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 98, 161, 56, 11
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 156, 161, 236, 11
-  CONTROL "", 132, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 161, 72, 11
-  CONTROL "", 140, "TXBrowse", WS_TABSTOP|0x00300000, 48, 173, 440, 88
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 98, 267, 56, 11
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 156, 267, 236, 11
-  CONTROL "", 152, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 267, 72, 11
-  CONTROL "Contabilidad", -1, "Button", BS_GROUPBOX, 44, 29, 447, 252
-  CONTROL "Grp. venta", -1, "Static", WS_GROUP, 49, 41, 35, 8
-  CONTROL "Cta. ventas", -1, "Static", WS_GROUP, 49, 57, 45, 8
-  CONTROL "Cta. compras", -1, "Static", WS_GROUP, 49, 164, 45, 8
-  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 57, 20, 8
-  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 164, 20, 8
-  CONTROL "Cta. portes", -1, "Static", WS_GROUP, 49, 270, 35, 8
-  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 270, 20, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 48, 51, 440, 1
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 48, 157, 440, 1
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 48, 263, 440, 1
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 107, 40, 80, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 189, 40, 200, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 107, 53, 80, 11
+  CONTROL "", 111, "Edit", WS_BORDER|WS_TABSTOP, 189, 53, 200, 11
+  CONTROL "", 112, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 53, 72, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 107, 66, 80, 11
+  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 189, 66, 200, 11
+  CONTROL "", 122, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 66, 72, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 107, 96, 80, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 189, 96, 200, 11
+  CONTROL "", 132, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 96, 72, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 107, 109, 80, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 189, 109, 200, 11
+  CONTROL "", 142, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 109, 72, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 107, 138, 80, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 189, 138, 200, 11
+  CONTROL "", 152, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 138, 72, 11
+  CONTROL "Cuentas ventas", -1, "Button", BS_GROUPBOX, 44, 29, 447, 53
+  CONTROL "Grupo venta", -1, "Static", WS_GROUP, 49, 43, 45, 8
+  CONTROL "Venta", -1, "Static", WS_GROUP, 49, 56, 45, 8
+  CONTROL "Compras", -1, "Static", WS_GROUP, 49, 99, 45, 8
+  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 56, 20, 8
+  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 99, 20, 8
+  CONTROL "Cta. portes", -1, "Static", WS_GROUP, 49, 141, 35, 8
+  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 141, 20, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Enlace contable del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 45, 5, 446, 8
+  CONTROL "Devolución", -1, "Static", WS_GROUP, 49, 69, 55, 8
+  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 69, 20, 8
+  CONTROL "Contabilidad compras", -1, "Button", BS_GROUPBOX, 44, 84, 447, 41
+  CONTROL "Devolución", -1, "Static", WS_GROUP, 49, 112, 55, 8
+  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 112, 20, 8
+  CONTROL "Cuentas portes", -1, "Button", BS_GROUPBOX, 44, 127, 447, 29
 }
 
 ART_2 DIALOG DISCARDABLE -22, -7, 496, 286
