--- a/resource/Gstimage2.rc
+++ b/resource/Gstimage2.rc
@@ -16,38 +16,17 @@ CLI BITMAP "..\\bmp\\gc_id_card_16.bmp"
 CLIPOT BITMAP "..\\bmp\\gc_id_card_hint_16.bmp"
 FIND BITMAP "..\\bmp\\gc_binocular2_16.bmp"
 PAGINATOR_32 BITMAP "..\\bmp\\Paginator_32.bmp"
-
-
 NIL16 BITMAP "..\\bmp\\Nil_16.bmp"
 
-BADDFILTER16 BITMAP "..\\bmp\\Funnel_Add_16.bmp"
-SNDINT32 BITMAP "..\\bmp\\Earth_32.bmp"
-SATELLITE16 BITMAP "..\\bmp\\gc_satellite_dish2_16.bmp"
-SEND16 BITMAP "..\\bmp\\Satellite_16.bmp"
-SEND32 BITMAP "..\\bmp\\Nav_up_green_32.bmp"
-XSatellite16 BITMAP "..\\bmp\\Satellite_16.bmp"
-on_worker2_folder_document_16 BITMAP "..\\bmp\\on_worker2_folder_document_16.bmp"
-worker2_folder_document_16 BITMAP "..\\bmp\\worker2_folder_document_16.bmp"
-SELSEND16 BITMAP "..\\bmp\\Nav_up_green_16.bmp"
+SEND16 BITMAP "..\\bmp\\gc_satellite_dish2_16.bmp"
 BSEL BITMAP "..\\bmp\\Check2_16.bmp"
 SEND BITMAP "..\\bmp\\Check2_16.bmp"
 BSTOP BITMAP "..\\bmp\\Forbidden_16.bmp"
-BCANCEL BITMAP "..\\bmp\\Cancel_16.bmp"
-Check2_16 BITMAP "..\\bmp\\Check2_16.bmp"
-Cancel_16 BITMAP "..\\bmp\\Cancel_16.bmp"
-INFO BITMAP "..\\bmp\\Information_16.bmp"
-INFO_DELETE BITMAP "..\\bmp\\Information_Delete_16.bmp"
+INFO BITMAP "..\\bmp\\gc_information_16.bmp"
 CODEBAR BITMAP "..\\bmp\\Code_bar_16.bmp"
+
 BMPLOCK BITMAP "..\\bmp\\Key1_16.bmp"
 BGREEN BITMAP "..\\bmp\\Bullet_Square_Green_16.bmp"
 BYELOW BITMAP "..\\bmp\\Bullet_Ball_Yellow_16.bmp"
 BRED BITMAP "..\\bmp\\Bullet_Square_Red_16.bmp"
 BCONTA BITMAP "..\\bmp\\Nav_Plain_Red_16.bmp"
-IMPORT32 BITMAP "..\\bmp\\Import2.bmp"
-EXPORT32 BITMAP "..\\bmp\\Export2.bmp"
-DOCUMENT_PLAIN_YELLOW_16 BITMAP "..\\bmp\\Document_Plain_Yellow_User1_16.bmp"
-DOCUMENT_PLAIN_YELLOW_32 BITMAP "..\\bmp\\Document_Plain_Yellow_User1_32.bmp"
-WORKER_FOLDER_BLUE_16 BITMAP "..\\bmp\\Worker_Folder_Blue_16.bmp"
-WORKER_FOLDER_BLUE_32 BITMAP "..\\bmp\\Worker_Folder_Blue_32.bmp"
-BANC_16 BITMAP "..\\bmp\\Office_Building_16.bmp"
-BANC_32 BITMAP "..\\bmp\\Office-Building_32.bmp"
