--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -281,3 +281,4 @@ GC_MONITOR_64 BITMAP "..\\bmp\\gc_monitor_64.bmp"
 GC_OBJECT_CUBE_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_object_cube_cabinet_open_64.bmp"
 GC_USER_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_user_cabinet_open_64.bmp"
 GC_FUNNEL_ADD_16 BITMAP "..\\bmp\\gc_funnel_add_16.bmp"
+GC_GEARWHEEL_RUN_32 BITMAP "..\\bmp\\gc_gearwheel_run_32.bmp"
