--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -282,3 +282,4 @@ GC_OBJECT_CUBE_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_object_cube_cabinet_open_64.b
 GC_USER_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_user_cabinet_open_64.bmp"
 GC_FUNNEL_ADD_16 BITMAP "..\\bmp\\gc_funnel_add_16.bmp"
 GC_GEARWHEEL_RUN_32 BITMAP "..\\bmp\\gc_gearwheel_run_32.bmp"
+GC_DOCUMENT_TEXT_EARTH_16 BITMAP "..\\bmp\\gc_document_text_earth_16.bmp"
