borrado de iconos

--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -37,9 +37,7 @@ GC_ARROW_CIRCLE2_48 BITMAP "..\\bmp\\gc_arrow_circle2_48.bmp"
 GC_CLOCK_REFRESH_48 BITMAP "..\\bmp\\gc_clock_refresh_48.bmp"
 GC_CLOCK_STOP_48 BITMAP "..\\bmp\\gc_clock_stop_48.bmp"
 
-clock_run_48_alpha BITMAP "..\\bmp\\clock_run_48_alpha.bmp"
-clock_stop_48_alpha BITMAP "..\\bmp\\clock_stop_48_alpha.bmp"
-clock_refresh_48_alpha BITMAP "..\\bmp\\clock_refresh_48_alpha.bmp"
+GC_CLOCK_PLAY_48 BITMAP "..\\bmp\\gc_clock_play_48.bmp"
 
 FOLDER BITMAP "..\\bmp\\gc_folder_open_16.bmp"
 GC_ARROW_DOWN_16 BITMAP "..\\bmp\\gc_arrow_down_16.bmp"
@@ -49,7 +47,6 @@ GC_PIECE_12 BITMAP "..\\bmp\\gc_piece_12.bmp"
 GC_BOX_CLOSED_48 BITMAP "..\\bmp\\gc_box_closed_48.bmp"
 GC_CLIPBOARD_CHECK_EDIT_48 BITMAP "..\\bmp\\gc_clipboard_check_edit_48.bmp"
 GC_CREDIT_CARDS_24 BITMAP "..\\bmp\\gc_credit_cards_24.bmp"
-GC_CREDIT_CARDS_32 BITMAP "..\\bmp\\gc_credit_cards_32.bmp"
 GC_MONEYBAG_EURO_24 BITMAP "..\\bmp\\GC_MONEYBAG_EURO_24.bmp"
 GC_SYMBOL_PERCENT_24 BITMAP "..\\bmp\\GC_SYMBOL_PERCENT_24.bmp"
 GC_SHOPPING_BASKET_32 BITMAP "..\\bmp\\gc_shopping_basket_32.bmp"
@@ -232,7 +229,6 @@ GC_DATA_48 BITMAP "..\\bmp\\gc_data_48.bmp"
 GC_CASH_REGISTER_USER_48 BITMAP "..\\bmp\\gc_cash_register_user_48.bmp"
 GC_CASH_REGISTER_GIFT_48 BITMAP "..\\bmp\\gc_cash_register_gift_48.bmp"
 GC_CASH_REGISTER_DELETE_48 BITMAP "..\\bmp\\gc_cash_register_delete_48.bmp"
-GC_DOCUMENT_EMPTY_USER_48 BITMAP "..\\bmp\\gc_document_empty_user_48.bmp"
 GC_MONEY2_PLUS_32 BITMAP "..\\bmp\\gc_money2_plus_32.bmp"
 GC_GIFT_DISK_32 BITMAP "..\\bmp\\gc_gift_disk_32.bmp"
 GC_PRINTER2_DISK_32 BITMAP "..\\bmp\\GC_PRINTER2_DISK_32.bmp"
@@ -283,4 +279,3 @@ GC_USER_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_user_cabinet_open_64.bmp"
 GC_FUNNEL_ADD_16 BITMAP "..\\bmp\\gc_funnel_add_16.bmp"
 GC_GEARWHEEL_RUN_32 BITMAP "..\\bmp\\gc_gearwheel_run_32.bmp"
 GC_DOCUMENT_TEXT_EARTH_16 BITMAP "..\\bmp\\gc_document_text_earth_16.bmp"
-GC_TRAFFICLIGHT_ON_16 BITMAP "..\\bmp\\gc_trafficlight_on_16.bmp"
