--- a/resource/Gstimage2.rc
+++ b/resource/Gstimage2.rc
@@ -5,28 +5,40 @@
 #include <richedit.h>
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
-PDF BITMAP "..\\bmp\\gc_document_pdf_16.bmp"
-PDF_16 BITMAP "..\\bmp\\gc_document_pdf_16.bmp"
-EXIT BITMAP "..\\bmp\\gc_door_exit_16.bmp"
-TOP BITMAP "..\\bmp\\Navigate_Beginning_16.bmp"
-PREVIOUS BITMAP "..\\bmp\\Navigate_Left_16.bmp"
-NEXT BITMAP "..\\bmp\\Navigate_Right_16.bmp"
-BOTTOM BITMAP "..\\bmp\\Navigate_End_16.bmp"
-CLI BITMAP "..\\bmp\\gc_id_card_16.bmp"
-CLIPOT BITMAP "..\\bmp\\gc_id_card_hint_16.bmp"
-FIND BITMAP "..\\bmp\\gc_binocular2_16.bmp"
-PAGINATOR_32 BITMAP "..\\bmp\\Paginator_32.bmp"
-NIL16 BITMAP "..\\bmp\\Nil_16.bmp"
+9001 RCDATA "..\\bmp\\gestool.png"
 
-SEND16 BITMAP "..\\bmp\\gc_satellite_dish2_16.bmp"
-BSEL BITMAP "..\\bmp\\Check2_16.bmp"
-SEND BITMAP "..\\bmp\\Check2_16.bmp"
-BSTOP BITMAP "..\\bmp\\Forbidden_16.bmp"
-INFO BITMAP "..\\bmp\\gc_information_16.bmp"
-CODEBAR BITMAP "..\\bmp\\Code_bar_16.bmp"
+ALPHA BITMAP "..\\bmp\\Alpha.bmp"
 
-BMPLOCK BITMAP "..\\bmp\\Key1_16.bmp"
-BGREEN BITMAP "..\\bmp\\Bullet_Square_Green_16.bmp"
-BYELOW BITMAP "..\\bmp\\Bullet_Ball_Yellow_16.bmp"
-BRED BITMAP "..\\bmp\\Bullet_Square_Red_16.bmp"
-BCONTA BITMAP "..\\bmp\\Nav_Plain_Red_16.bmp"
+GESTOOL BITMAP "..\\bmp\\gestool.bmp"
+
+NAVIGATE_LEFT BITMAP "..\\bmp\\navigate_left.bmp"
+NAVIGATE_LEFT2 BITMAP "..\\bmp\\navigate_left2.bmp"
+NAVIGATE_RIGHT BITMAP "..\\bmp\\navigate_right.bmp"
+NAVIGATE_RIGHT2 BITMAP "..\\bmp\\navigate_right2.bmp"
+
+LOGOGESTOOL_48 BITMAP "..\\bmp\\logogestool_48.bmp"
+
+FLAT_ADD_64 BITMAP "..\\bmp\\flat_add_64.bmp"
+FLAT_CHECK_64 BITMAP "..\\bmp\\flat_check_64.bmp"
+FLAT_CONFIG_64 BITMAP "..\\bmp\\flat_config_64.bmp"
+FLAT_DEL_64 BITMAP "..\\bmp\\flat_del_64.bmp"
+FLAT_EDIT_64 BITMAP "..\\bmp\\flat_edit_64.bmp"
+FLAT_END_64 BITMAP "..\\bmp\\flat_end_64.bmp"
+FLAT_MINUS_64 BITMAP "..\\bmp\\flat_minus_64.bmp"
+FLAT_UP_64 BITMAP "..\\bmp\\flat_up_64.bmp"
+FLAT_DOWN_64 BITMAP "..\\bmp\\flat_down_64.bmp"
+FLAT_DOCUMENT_64 BITMAP "..\\bmp\\flat_document_64.bmp"
+FLAT_PAGE_UP_64 BITMAP "..\\bmp\\flat_page_up_64.bmp"
+FLAT_PAGE_DOWN_64 BITMAP "..\\bmp\\flat_page_down_64.bmp"
+FLAT_LEFT_64 BITMAP "..\\bmp\\flat_left_64.bmp"
+FLAT_RIGHT_64 BITMAP "..\\bmp\\flat_right_64.bmp"
+FLAT_PRINTER_64 BITMAP "..\\bmp\\flat_printer_64.bmp"
+FLAT_CLIPBOARD_EMPTY_USER1_64 BITMAP "..\\bmp\\flat_clipboard_empty_user1_64.bmp"
+FLAT_ABOUT_64 BITMAP "..\\bmp\\flat_about_64.bmp"
+FLAT_ATOM_64 BITMAP "..\\bmp\\flat_atom_64.bmp"
+
+ZOOM_IN_16 BITMAP "..\\bmp\\zoom_in_16.bmp"
+ZOOM_IN_32 BITMAP "..\\bmp\\zoom_in_32.bmp"
+ZOOM_IN_48 BITMAP "..\\bmp\\zoom_in_48.bmp"
+
+SHOPPING_BAG_48 BITMAP "..\\bmp\\shopping_bag_48.bmp"
