--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -4,11 +4,7 @@
 #include <commctrl.h>
 #include <richedit.h>
 
-LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
-
-1 MANIFEST "WindowsXP.Manifest"
-
-GESTOOL ICON "..\\Bmp\\Gestool.ico"
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
 USER1_HAMMER_16 BITMAP "..\\bmp\\user1_hammer_16.bmp"
 
@@ -18,137 +14,6 @@ STAR_YELLOW_EDIT_16 BITMAP "..\\bmp\\Star_Yellow_Edit_16.bmp"
 
 STAR_YELLOW_DEL_16 BITMAP "..\\bmp\\Star_Yellow_Delete_16.bmp"
 
-INFO_0 DIALOG DISCARDABLE 32, 0, 475, 234
-STYLE WS_CHILD|DS_3DLOOK
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 300, "txbrowse", WS_TABSTOP|0x00a00000, 2, 18, 470, 212
-  CONTROL "&Modificar", 301, "Button", WS_TABSTOP, 2, 1, 50, 14
-  CONTROL "&Zoom", 302, "Button", WS_TABSTOP, 57, 1, 50, 14
-  CONTROL "&Eliminar", 303, "Button", WS_TABSTOP, 112, 1, 50, 14
-  CONTROL "&Visualizar", 304, "Button", WS_TABSTOP, 167, 1, 50, 14
-  CONTROL "&Imprimir", 305, "Button", WS_TABSTOP, 222, 1, 50, 14
-}
-
-INFO_1 DIALOG DISCARDABLE 32, 0, 521, 266
-STYLE WS_CHILD|DS_3DLOOK
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 300, "txbrowse", WS_TABSTOP|0x00a00000, 104, 18, 412, 246
-  CONTROL "", 310, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 2, 2, 101, 262
-  CONTROL "&Modificar", 301, "Button", WS_TABSTOP, 104, 1, 50, 14
-  CONTROL "&Zoom", 302, "Button", WS_TABSTOP, 159, 1, 50, 14
-  CONTROL "&Eliminar", 303, "Button", WS_TABSTOP, 214, 1, 50, 14
-  CONTROL "&Visualizar", 304, "Button", WS_TABSTOP, 269, 1, 50, 14
-  CONTROL "&Imprimir", 305, "Button", WS_TABSTOP, 324, 1, 50, 14
-  CONTROL "&Actualizar", 306, "Button", WS_TABSTOP, 466, 1, 50, 14
-}
-
-INF_TARIFA DIALOG DISCARDABLE 76, -80, 274, 219
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Listado de tarifas"
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 11, 64, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 120, 11, 148, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 54, 24, 64, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 120, 24, 148, 11
-  CONTROL "Precio 1", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 45, 60, 12
-  CONTROL "Precio 2", 141, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 57, 60, 12
-  CONTROL "Precio 3", 142, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 69, 60, 12
-  CONTROL "Precio 4", 143, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 81, 60, 12
-  CONTROL "Precio 5", 144, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 93, 60, 12
-  CONTROL "Precio 6", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 105, 60, 12
-  CONTROL "Punto verde", 146, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 117, 60, 12
-  CONTROL "Dto. fijo", 147, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 129, 60, 12
-  CONTROL "Dto. lineal", 148, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 141, 60, 12
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 52, 167, 216, 11
-  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 52, 180, 216, 11
-  CONTROL "&Aceptar", 500, "Button", WS_TABSTOP, 112, 201, 50, 14
-  CONTROL "&Imprimir", 501, "Button", WS_TABSTOP, 167, 201, 50, 14
-  CONTROL "&Salir", 502, "Button", WS_TABSTOP, 222, 201, 50, 14
-  CONTROL "Desde", -1, "Static", WS_GROUP, 10, 14, 24, 8
-  CONTROL "Hasta ", -1, "Static", WS_GROUP, 10, 27, 22, 8
-  CONTROL "Tarifas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 2, 270, 36
-  CONTROL "Columnas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 38, 270, 118
-  CONTROL "Título", -1, "Static", WS_GROUP, 9, 170, 31, 8
-  CONTROL "Subtítulo", -1, "Static", WS_GROUP, 9, 183, 32, 8
-  CONTROL "Títulos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 157, 270, 38
-}
-
-INF_PRECOBROS DIALOG DISCARDABLE 18, -16, 270, 141
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Previsión de cobros a clientes"
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 41, 10, 60, 11
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 41, 23, 60, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 41, 50, 65, 11
-  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 108, 50, 154, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 41, 62, 65, 11
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 108, 62, 154, 11
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 42, 91, 220, 11
-  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 42, 103, 220, 11
-  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 13, 30, 8
-  CONTROL "Desde", -1, "Static", WS_GROUP, 5, 53, 30, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 5, 65, 32, 8
-  CONTROL "Título", -1, "Static", WS_GROUP, 5, 93, 31, 8
-  CONTROL "Subtítulo", -1, "Static", WS_GROUP, 5, 105, 32, 8
-  CONTROL "Títulos del listado", 115, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 81, 266, 36
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 26, 30, 8
-  CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 2, 266, 35
-  CONTROL "Clientes", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 39, 266, 39
-  CONTROL "&Visualizar", 508, "Button", WS_TABSTOP, 108, 123, 50, 14
-  CONTROL "&Imprimir", 505, "Button", WS_TABSTOP, 163, 123, 50, 14
-  CONTROL "&Cancelar", 551, "Button", WS_TABSTOP, 218, 123, 50, 14
-}
-
-INF_PREPAGOS DIALOG DISCARDABLE 18, -16, 270, 141
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Previsión de pagos a proveedores"
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 41, 10, 60, 11
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 41, 23, 60, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 41, 50, 65, 11
-  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 108, 50, 154, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 41, 62, 65, 11
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 108, 62, 154, 11
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 42, 91, 220, 11
-  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 42, 103, 220, 11
-  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 13, 30, 8
-  CONTROL "Desde", -1, "Static", WS_GROUP, 5, 53, 30, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 5, 65, 32, 8
-  CONTROL "Título", -1, "Static", WS_GROUP, 5, 93, 31, 8
-  CONTROL "Subtítulo", -1, "Static", WS_GROUP, 5, 105, 32, 8
-  CONTROL "Titulos del listado", 115, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 81, 266, 36
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 26, 30, 8
-  CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 2, 266, 35
-  CONTROL "Proveedor", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 39, 266, 39
-  CONTROL "&Visualizar", 508, "Button", WS_TABSTOP, 108, 123, 50, 14
-  CONTROL "&Imprimir", 505, "Button", WS_TABSTOP, 163, 123, 50, 14
-  CONTROL "&Cancelar", 551, "Button", WS_TABSTOP, 218, 123, 50, 14
-}
-
-INF_GEN01 DIALOG DISCARDABLE -2, -14, 406, 244
-STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 1110, "Edit", WS_BORDER|WS_TABSTOP, 57, 9, 60, 11
-  CONTROL "", 1120, "Edit", WS_BORDER|WS_TABSTOP, 57, 22, 60, 11
-  CONTROL "", 1140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 57, 188, 210, 11
-  CONTROL "", 1150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 57, 201, 210, 11
-  CONTROL "TApoloMeter", 1160, "TApoloMeter", 0x00000000, 57, 225, 210, 10
-  CONTROL "Desde", -1, "Static", WS_GROUP, 8, 12, 43, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 8, 25, 43, 8
-  CONTROL "Título", -1, "Static", WS_GROUP, 8, 191, 31, 8
-  CONTROL "Subtítulo", -1, "Static", WS_GROUP, 8, 204, 32, 8
-  CONTROL "Código", -1, "Button", BS_GROUPBOX, 2, 1, 273, 36
-  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 2, 216, 273, 23
-  CONTROL "Títulos", -1, "Button", BS_GROUPBOX, 2, 178, 273, 38
-  CONTROL "", 1111, "Edit", WS_BORDER|WS_TABSTOP, 119, 9, 148, 11
-  CONTROL "", 1121, "Edit", WS_BORDER|WS_TABSTOP, 119, 22, 148, 11
-}
 
 INF_GEN01A DIALOG DISCARDABLE -2, -14, 406, 244
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
@@ -12754,8 +12619,6 @@ FONT 8, "MS Sans Serif"
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
-
-BSTOP BITMAP "..\\bmp\\Forbidden_16.bmp"
 
 EXIT BITMAP "..\\bmp\\gc_door_exit_16.bmp"
 
