--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2519,7 +2519,7 @@ CAPTION "Ayuda a la entrada"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 5, 13, 247, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 2, 32, 337, 200
+  CONTROL "", 105, "IXBrowse", WS_TABSTOP|0x00300000, 2, 32, 337, 200
   CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 259, 13, 77, 71
   CONTROL "Aña&dir", 500, "Button", WS_TABSTOP, 2, 241, 50, 36
   CONTROL "&Modificar", 501, "Button", WS_TABSTOP, 62, 241, 50, 37
@@ -7225,7 +7225,7 @@ FASTFILTROS_ALMACENADOS DIALOG DISCARDABLE 9, 8, 440, 223
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+  CONTROL "", 200, "IXBrowse", 0x00200000, 2, 20, 436, 202
   CONTROL "Cargar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
   CONTROL "Eliminar", 110, "Button", WS_TABSTOP, 57, 4, 50, 14
 }
@@ -7237,7 +7237,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Inicializar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
   CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 57, 4, 50, 14
   CONTROL "Guardar filtro", 110, "Button", WS_TABSTOP, 378, 4, 60, 14
-  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+  CONTROL "", 200, "IXBrowse", 0x00200000, 2, 20, 436, 202
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_EIRE
@@ -7842,7 +7842,7 @@ CAPTION "Ayuda a la entrada"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 9, 14, 409, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 3, 35, 552, 274
+  CONTROL "", 105, "IXBrowse", WS_TABSTOP|0x00300000, 3, 35, 552, 274
   CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 438, 14, 110, 138
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 313, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 57, 313, 50, 14
@@ -7858,7 +7858,7 @@ CAPTION "Ayuda a la entrada"
 FONT 12, "MS Sans Serif"
 {
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 7, 13, 217, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 2, 32, 313, 150
+  CONTROL "", 105, "IXBrowse", WS_TABSTOP|0x00300000, 2, 32, 313, 150
   CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 234, 13, 77, 138
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 184, 45, 30
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 49, 184, 45, 30
@@ -7874,7 +7874,7 @@ CAPTION "Ayuda a la entrada"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 50, 45, 278, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 45, 64, 373, 265
+  CONTROL "", 105, "IXBrowse", WS_TABSTOP|0x00300000, 45, 64, 373, 265
   CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 337, 45, 77, 138
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 45, 332, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 149, 332, 50, 14
@@ -7894,7 +7894,7 @@ CAPTION "Ayuda a la entrada"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 50, 45, 330, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 45, 64, 425, 168
+  CONTROL "", 105, "IXBrowse", WS_TABSTOP|0x00300000, 45, 64, 425, 168
   CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 390, 45, 77, 138
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 45, 331, 50, 14
   CONTROL "D&uplicar", 502, "Button", WS_TABSTOP, 97, 331, 50, 14
@@ -7904,7 +7904,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 420, 331, 50, 14
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 44, 34, 340, 27
   CONTROL "", 300, "TBitmap", 0x00000000, 473, 38, 60, 62, 0x00020000
-  CONTROL "", 320, "TXBrowse", 0x00200000, 45, 235, 425, 90
+  CONTROL "", 320, "IXBrowse", 0x00200000, 45, 235, 425, 90
   CONTROL "Aceptar con propiedades [F6]", 550, "Button", WS_TABSTOP, 262, 331, 100, 14
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Información relacionada con artículos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 487, 8
@@ -21077,7 +21077,7 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_V
 CAPTION "Opciones"
 FONT 10, "Tahoma", 0, 0, 1
 {
-  CONTROL "", 100, "TXBrowse", 0x00200000, 44, 29, 269, 104
+  CONTROL "", 100, "IXBrowse", 0x00200000, 44, 29, 269, 104
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 209, 137, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 263, 137, 50, 14
   CONTROL "", 400, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
