--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5877,6 +5877,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Stocks iniciales", 290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 114, 184, 62, 10
   CONTROL "Formas pago", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 114, 196, 54, 10
   CONTROL "Bancos", 390, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 114, 208, 37, 10
+  CONTROL "Scripts", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 114, 220, 54, 10
+  CONTROL "Entidades", 410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 114, 232, 46, 10
   CONTROL "Pedidos a proveedor", 310, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 248, 52, 79, 10
   CONTROL "Albaranes de proveedores no facturados", 320, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 248, 64, 141, 10
   CONTROL "Presupuestos de clientes", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 248, 76, 92, 10
