--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11852,16 +11852,17 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-LALBPRV DIALOG DISCARDABLE 9, -5, 404, 291
+LALBPRV DIALOG DISCARDABLE 9, -33, 605, 325
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Lineas de Factura"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 2, 2, 401, 251
-  CONTROL "&Series [F6]", 552, "Button", WS_TABSTOP, 2, 257, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 242, 257, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 297, 257, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 352, 257, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 540, 289
+  CONTROL "&Series [F6]", 552, "Button", WS_TABSTOP, 3, 295, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 383, 295, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 438, 295, 50, 14
+  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 493, 295, 50, 14
+  CONTROL "TBitmap", 220, "TBitmap", 0x00000000, 544, 15, 59, 47
 }
 
 LALBPRV_1 DIALOG DISCARDABLE 135, 103, 399, 238
